Allow application to be bundled into a single HTML file for distribution.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run build:react && npm run build:bundle:static && npm run build:bundle:html", 
+    "build:react": "react-scripts build",
+    "build:bundle:static": "webpack --config webpack.config.js",
+    "build:bundle:html": "node bundle-html.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -22,5 +25,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "webpack-cli": "^3.2.3"
+  }
 }
