--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dnd-battle-tracker",
-  "version": "1.17.1",
+  "version": "1.18.0",
   "private": true,
   "dependencies": {
     "fast-deep-equal": "^2.0.1",
@@ -10,11 +10,12 @@
     "react-scripts": "2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run build:dev && react-scripts start",
     "build": "npm run build:react && npm run build:bundle:static && npm run build:bundle:html",
     "build:react": "react-scripts build",
     "build:bundle:static": "webpack --config webpack.config.js",
-    "build:bundle:html": "node bundle-html.js",
+    "build:bundle:html": "node ./scripts/bundle-html.js",
+    "build:dev": "node ./scripts/create-index.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -28,6 +29,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "mustache": "^3.0.1",
     "webpack-cli": "^3.2.3"
   }
 }
