--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "react-scripts": "2.1.3"
   },
   "scripts": {
-    "start": "npm run build:dev && react-scripts start",
-    "build": "npm run build:react && npm run build:bundle:static && npm run build:bundle:html",
+    "start": "npm run build:index && react-scripts start",
+    "build": "npm run build:index && npm run build:react && npm run build:bundle:static && npm run build:bundle:html",
     "build:react": "react-scripts build",
     "build:bundle:static": "webpack --config webpack.config.js",
     "build:bundle:html": "node ./scripts/bundle-html.js",
-    "build:dev": "node ./scripts/create-index.js",
+    "build:index": "node ./scripts/create-index.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
