Set page title of Github pages.

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-slate
-page.title: D&D Battle Tracker | D&D 5e Combat Management
+name: D&D Battle Tracker
+description: D&D 5e Combat Management
