validate file against schema on load

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "fast-deep-equal": "^2.0.1",
     "file-saver": "^2.0.2",
     "is-hotkey": "^0.1.4",
+    "jsonschema": "^1.2.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
