--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "jsonschema": "^1.2.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "npm run build:index && react-scripts start",
@@ -32,6 +32,7 @@
   ],
   "devDependencies": {
     "mustache": "^3.0.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack-cli": "^3.2.3"
   }
 }
