Improved creature note list styling (#26)
* Monster Manual style notes

* Experiment with columns

* Expand on column design

* Mobile view for expanded creature columns

* Remove commented CSS and HTML

* Comma separate conditions and notes in collapsed creature

* Remove dndbeyond links from creature titles

* Ensure health section stays in first column

* widen creature note label to match PHB

* Make unconscious status link look like other conditions

* Improve cross-browser compatibility of column layout

* Bump version number

* Remove unused import

* Use lodash modules instead of Array find and findIndex to support IE. Tweak left column height for better browser compatibility.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "dnd-battle-tracker",
-  "version": "1.29.1",
+  "version": "1.30.0",
   "private": true,
   "dependencies": {
     "fast-deep-equal": "^2.0.1",
     "file-saver": "^2.0.2",
     "is-hotkey": "^0.1.4",
     "jsonschema": "^1.2.4",
+    "lodash.find": "^4.6.0",
+    "lodash.findindex": "^4.6.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "3.0.1"
