--- a/package.json
+++ b/package.json
@@ -10,18 +10,15 @@
     "lodash.find": "^4.6.0",
     "lodash.findindex": "^4.6.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "^4.0.0"
+    "react-dom": "^16.12.0"
   },
   "scripts": {
-    "start": "npm run build:index && react-scripts start",
-    "build": "npm run build:index && npm run build:react && npm run build:bundle:static && npm run build:bundle:html",
-    "build:react": "react-scripts build",
-    "build:bundle:static": "webpack --config webpack.config.js",
+    "start": "npm run build:index && webpack-dev-server --open --mode development",
+    "build": "npm run build:index && npm run build:react && npm run build:bundle:html",
+    "build:react": "webpack --mode production",
     "build:bundle:html": "node ./scripts/bundle-html.js",
     "build:index": "node ./scripts/create-index.js",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,8 +30,19 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^5.0.0",
+    "css-minimizer-webpack-plugin": "^1.1.5",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.2.1",
     "mustache": "^3.2.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack-cli": "^3.3.10"
+    "style-loader": "^2.0.0",
+    "webpack": "^5.3.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
