--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "build:react": "webpack --mode production",
     "build:bundle:html": "node ./scripts/bundle-html.js",
     "build:index": "node ./scripts/create-index.js",
-    "test": "react-scripts test"
+    "test": "npx jest --watch"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    },
+    "setupFiles": [
+      "<rootDir>/jest.init.js"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,6 +47,7 @@
     "css-minimizer-webpack-plugin": "^1.1.5",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.1",
     "mini-css-extract-plugin": "^1.2.1",
     "mustache": "^3.2.0",
     "webpack": "^5.3.2",
