--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonschema": "^1.2.5",
     "lodash.find": "^4.6.0",
     "lodash.findindex": "^4.6.0",
+    "nanoid": "^3.1.16",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
