--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lodash.findindex": "^4.6.0",
     "nanoid": "^3.1.16",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "subscriptions-transport-ws": "^0.9.18"
   },
   "scripts": {
     "start": "npm run build:index && webpack-dev-server --open --mode development",
