--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.2.5",
+    "aws-appsync-auth-link": "^3.0.2",
+    "aws-appsync-subscription-link": "^3.0.3",
     "fast-deep-equal": "^2.0.1",
     "file-saver": "^2.0.2",
     "graphql": "^15.4.0",
