--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "dnd-battle-tracker",
-  "version": "2.2.1",
+  "version": "2.3.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.2.5",
+    "@aws-sdk/client-cognito-identity": "^1.0.0-rc.7",
+    "aws-appsync-auth-link": "^3.0.2",
+    "aws-appsync-subscription-link": "^3.0.3",
     "fast-deep-equal": "^2.0.1",
     "file-saver": "^2.0.2",
+    "graphql": "^15.4.0",
     "is-hotkey": "^0.1.6",
     "jsonschema": "^1.2.5",
     "lodash.find": "^4.6.0",
     "lodash.findindex": "^4.6.0",
+    "nanoid": "^3.1.16",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "subscriptions-transport-ws": "^0.9.18"
   },
   "scripts": {
     "start": "npm run build:index && webpack-dev-server --open --mode development",
