--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dnd-battle-tracker",
-  "version": "2.5.0",
+  "version": "2.5.1",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.2.5",
@@ -26,7 +26,8 @@
     "build:bundle:html": "node ./scripts/bundle-html.js",
     "build:index": "node ./scripts/create-index.js",
     "test": "npx jest --watch",
-    "test:ci": "npx jest"
+    "test:ci": "npx jest",
+    "lint": "npx eslint --ext js,jsx src"
   },
   "jest": {
     "moduleNameMapper": {
