--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dnd-battle-tracker",
-  "version": "2.5.1",
+  "version": "2.5.2",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.2.5",
@@ -20,7 +20,7 @@
     "subscriptions-transport-ws": "^0.9.18"
   },
   "scripts": {
-    "start": "npm run build:index && webpack-dev-server --open --mode development",
+    "start": "npm run build:index && webpack serve --mode development --env development",
     "build": "npm run build:index && npm run build:react && npm run build:bundle:html",
     "build:react": "webpack --mode production",
     "build:bundle:html": "node ./scripts/bundle-html.js",
@@ -64,7 +64,6 @@
     "mini-css-extract-plugin": "^1.2.1",
     "mustache": "^3.2.0",
     "webpack": "^5.3.2",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^4.2.0"
   }
 }
