--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "mini-css-extract-plugin": "^1.2.1",
     "mustache": "^3.2.0",
     "webpack": "^5.3.2",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
