--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "build:react": "webpack --mode production",
     "build:bundle:html": "node ./scripts/bundle-html.js",
     "build:index": "node ./scripts/create-index.js",
+    "start:ci": "node ./test/appServer.js",
     "test": "npx jest --watch",
     "test:ci": "npx jest",
+    "test:e2e": "npx playwright test",
     "lint": "npx eslint --ext js,jsx src",
     "size": "npm run build && size-limit"
   },
@@ -51,6 +53,7 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.4",
     "@babel/preset-react": "^7.14.5",
+    "@playwright/test": "^1.22.2",
     "@size-limit/preset-app": "^4.9.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
@@ -62,6 +65,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "express": "^4.18.1",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.1.1",
