--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,3 +32,17 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run E2E Tests
       run: npx playwright test
+    - name: Upload E2E Test Results
+      uses: actions/upload-artifact@v2
+      if: always()
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
+    - name: Upload Build Artefact
+      uses: actions/upload-artifact@v2
+      if: always()
+      with:
+        name: dnd-battle-tracker.html
+        path: dist/dnd-battle-tracker.html
+        retention-days: 30
