--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dnd-battle-tracker",
-  "version": "5.8.2",
+  "version": "5.9.0",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.9",
@@ -22,7 +22,7 @@
     "build:bundle:html": "node ./scripts/bundle-html.js",
     "build:index": "node ./scripts/create-index.js",
     "start:ci": "node ./test/appServer.js",
-    "test": "npx jest --watch --testPathIgnorePatterns=/test/e2e.spec.js",
+    "test": "jest --watch --testPathIgnorePatterns=/test/e2e.spec.js",
     "test:ci": "npx jest --testPathIgnorePatterns=/test/e2e.spec.js",
     "test:e2e": "npx playwright test",
     "lint": "npx eslint --ext js,jsx src",
@@ -38,7 +38,9 @@
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
-    }
+    },
+    "testEnvironment": "jsdom",
+    "transformIgnorePatterns": ["/node_modules/(?!(uuid|nanoid)/)"]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -55,6 +57,8 @@
     "@babel/preset-react": "^7.18.6",
     "@playwright/test": "^1.23.1",
     "@size-limit/preset-app": "^4.9.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
@@ -69,6 +73,7 @@
     "html-loader": "^3.1.2",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "mini-css-extract-plugin": "^2.6.1",
     "mustache": "^4.2.0",
     "size-limit": "^4.9.1",
