Add environment and concurrency to deploystag ci/cd step

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -47,6 +47,10 @@ jobs:
   deploystage:
     name: Deploy to Staging
     runs-on: ubuntu-latest
+    environment: staging
+    concurrency:
+      group: staging
+      cancel-in-progress: true
     needs: testbuild
     if: github.event_name == 'push'
     steps:
