Fix deployprod dependency  in CI/CD

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -72,7 +72,7 @@ jobs:
     concurrency:
       group: production
       cancel-in-progress: true
-    needs: staging
+    needs: deploystage
     if: github.event_name == 'push'
     steps:
       - name: Check if version has been updated
