Must checkout project to check version in CI/CD

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -75,6 +75,7 @@ jobs:
     needs: deploystage
     if: github.event_name == 'push'
     steps:
+      - uses: actions/checkout@v2
       - name: Check if version has been updated
         id: versioncheck
         uses: EndBug/version-check@v1
