--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -55,6 +55,9 @@ jobs:
       cancel-in-progress: true
     needs: testbuild
     if: github.event_name == 'push'
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Download Build Artefact
         uses: actions/download-artifact@v3
