--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
     },
     "testEnvironment": "jsdom",
-    "transformIgnorePatterns": ["/node_modules/(?!(uuid|nanoid)/)"]
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(uuid|nanoid)/)"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -60,6 +62,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "babel-loader": "^8.2.5",
+    "buffer": "^6.0.3",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "eslint": "^7.32.0",
