Add missing Github Action permissions for AWS Credentials actions v5.9.1

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -97,6 +97,9 @@ jobs:
       cancel-in-progress: true
     needs: deployprodpreflight
     if: github.event_name == 'push' && needs.deployprodpreflight.outputs.versionchanged == 'true'
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Download Build Artefact
         uses: actions/download-artifact@v3
