--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@size-limit/preset-app": "^4.9.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.4.2",
     "babel-loader": "^8.2.5",
     "buffer": "^6.0.3",
     "css-loader": "^6.7.1",
