--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@testing-library/user-event": "^14.4.2",
     "babel-loader": "^8.2.5",
     "buffer": "^6.0.3",
+    "cross-fetch": "^3.1.5",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "eslint": "^8.21.0",
