--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "testEnvironment": "jsdom",
     "transformIgnorePatterns": [
       "/node_modules/(?!(uuid|nanoid)/)"
-    ]
+    ],
+    "setupFilesAfterEnv": ["./jest.setup.js"]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -80,6 +81,7 @@
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "mini-css-extract-plugin": "^2.6.1",
+    "msw": "^0.44.2",
     "mustache": "^4.2.0",
     "size-limit": "^4.9.1",
     "webpack": "^5.74.0",
