--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -78,6 +78,7 @@ jobs:
     if: github.event_name == 'push'
     outputs:
       versionchanged: ${{ steps.versioncheck.outputs.changed }}
+      version: ${{ steps.versioncheck.outputs.version }}
     steps:
       - uses: actions/checkout@v3
       - name: Check if version has been updated
@@ -112,3 +113,30 @@ jobs:
           aws-region: eu-west-2
       - name: Deploy to Production
         run: aws s3 sync . s3://dndbattletracker.com/
+
+  githubrelease:
+    name: Github Release
+    runs-on: ubuntu-latest
+    needs:
+      deployprodpreflight
+      deployprod
+    if: github.event_name == 'push'
+    permissions:
+      contents: write
+      contents: read
+      id-token: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Download Build Artefact
+        uses: actions/download-artifact@v3
+        with:
+          name: dnd-battle-tracker.html
+      - name: Create release
+        uses: ncipollo/release-action@v1
+        with:
+          commit: ${{ github.sha }}
+          makeLatest: true
+          body: ${{ github.event.head_commit.message }}
+          tag: "v${{ needs.deployprodpreflight.outputs.version }}"
+          artifacts: "dnd-battle-tracker.html"
