Correct cicd workflow release job permissions

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -122,9 +122,7 @@ jobs:
       deployprod
     if: github.event_name == 'push'
     permissions:
-      contents:
-        read
-        write
+      contents: write
       id-token: write
     steps:
       - name: Checkout
