--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -117,9 +117,7 @@ jobs:
   githubrelease:
     name: Github Release
     runs-on: ubuntu-latest
-    needs:
-      deployprodpreflight
-      deployprod
+    needs: [deployprodpreflight, deployprod]
     if: github.event_name == 'push'
     permissions:
       contents: write
