--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -68,6 +68,8 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::341118543232:role/github-s3-access
           aws-region: eu-west-2
+      - name: Display structure of downloaded files
+        run: ls -R
       - name: Deploy to Staging
         run: aws s3 sync ./dist-final s3://dndbattletracker.com/stage/
 
