--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-switch": "^7.0.0",
     "subscriptions-transport-ws": "^0.11.0"
   },
   "scripts": {
