--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "dnd-battle-tracker",
-  "version": "5.23.0",
+  "version": "5.22.0",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.1",
     "@aws-sdk/client-cognito-identity": "^3.262.0",
-    "@dice-roller/rpg-dice-roller": "^5.2.1",
     "aws-appsync-auth-link": "^3.0.7",
     "aws-appsync-subscription-link": "3.1.2",
     "file-saver": "^2.0.5",
@@ -32,7 +31,7 @@
   "size-limit": [
     {
       "limit": "240 kb",
-      "path": "dist-final/dnd-battle-tracker.html"
+      "path": "dist/dnd-battle-tracker.html"
     }
   ],
   "jest": {
@@ -44,9 +43,7 @@
     "transformIgnorePatterns": [
       "/node_modules/(?!(uuid|nanoid)/)"
     ],
-    "setupFilesAfterEnv": [
-      "./jest.setup.js"
-    ]
+    "setupFilesAfterEnv": ["./jest.setup.js"]
   },
   "eslintConfig": {
     "extends": "react-app"
