--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "size-limit": [
     {
       "limit": "240 kb",
-      "path": "dist/dnd-battle-tracker.html"
+      "path": "dist-final/dnd-battle-tracker.html"
     }
   ],
   "jest": {
