--- a/package.json
+++ b/package.json
@@ -16,11 +16,8 @@
     "subscriptions-transport-ws": "^0.11.0"
   },
   "scripts": {
-    "start": "npm run build:index && webpack serve --mode development --env development",
-    "build": "npm run build:index && npm run build:react && npm run build:bundle:html",
-    "build:react": "webpack --mode production",
-    "build:bundle:html": "node ./scripts/bundle-html.js",
-    "build:index": "node ./scripts/create-index.js",
+    "start": "webpack serve --mode development --env development",
+    "build": "webpack --mode production && node ./scripts/bundle-public.js",
     "start:ci": "node ./test/appServer.js",
     "test": "jest --watch --testPathIgnorePatterns=/test/e2e.spec.js",
     "test:ci": "npx jest --testPathIgnorePatterns=/test/e2e.spec.js",
@@ -91,6 +88,7 @@
     "msw": "^2.2.14",
     "mustache": "^4.2.0",
     "size-limit": "^4.9.1",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
