Replace references to dist-final

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,8 +40,8 @@ jobs:
       uses: actions/upload-artifact@v3
       if: always()
       with:
-        name: dist-final
-        path: dist-final
+        name: dist
+        path: dist
         retention-days: 30
 
   deploystage:
@@ -62,7 +62,7 @@ jobs:
       - name: Download Build Artefact
         uses: actions/download-artifact@v3
         with:
-          name: dist-final
+          name: dist
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1-node16
         with:
@@ -105,7 +105,7 @@ jobs:
       - name: Download Build Artefact
         uses: actions/download-artifact@v3
         with:
-          name: dist-final
+          name: dist
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1-node16
         with:
@@ -128,7 +128,7 @@ jobs:
       - name: Download Build Artefact
         uses: actions/download-artifact@v3
         with:
-          name: dist-final
+          name: dist
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
