--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "size-limit": [
     {
       "limit": "252 kb",
-      "path": "dist-final/dnd-battle-tracker.html"
+      "path": "dist/index.html"
     }
   ],
   "jest": {
