--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "jest --watch --testPathIgnorePatterns=/test/e2e.spec.js",
     "test:ci": "npx jest --testPathIgnorePatterns=/test/e2e.spec.js",
     "test:e2e": "PW_EXPERIMENTAL_SERVICE_WORKER_NETWORK_EVENTS=1 npx playwright test",
-    "lint": "npx eslint --ext js,jsx src",
+    "lint": "npx eslint --ext js,jsx src"
   },
   "jest": {
     "moduleNameMapper": {
