--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -17,23 +17,23 @@ jobs:
         node-version: '20.x'
     - name: Install Dependencies
       run: npm ci
-    - name: Run Unit Tests
-      run: npm run test:ci
-    - name: Run Linter
-      run: npm run lint
+    # - name: Run Unit Tests
+    #   run: npm run test:ci
+    # - name: Run Linter
+    #   run: npm run lint
     - name: Run Build
       run: npm run build
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run E2E Tests
-      run: npm run test:e2e
-    - name: Upload E2E Test Results
-      uses: actions/upload-artifact@v3
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+    # - name: Install Playwright Browsers
+    #   run: npx playwright install --with-deps
+    # - name: Run E2E Tests
+    #   run: npm run test:e2e
+    # - name: Upload E2E Test Results
+    #   uses: actions/upload-artifact@v3
+    #   if: always()
+    #   with:
+    #     name: playwright-report
+    #     path: playwright-report/
+    #     retention-days: 30
     - name: Upload Build Artefact
       uses: actions/upload-artifact@v3
       if: always()
@@ -42,50 +42,50 @@ jobs:
         path: dist
         retention-days: 30
 
-  deploystage:
-    name: Deploy to Staging
-    runs-on: ubuntu-latest
-    environment:
-      name: staging
-      url: https://dndbattletracker.com/stage/
-    concurrency:
-      group: staging
-      cancel-in-progress: true
-    needs: testbuild
-    if: github.event_name == 'push'
-    permissions:
-      id-token: write
-      contents: read
-    steps:
-      - name: Download Build Artefact
-        uses: actions/download-artifact@v3
-        with:
-          name: dist
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1-node16
-        with:
-          role-to-assume: arn:aws:iam::341118543232:role/github-s3-access
-          aws-region: eu-west-2
-      - name: Deploy to Staging
-        run: aws s3 sync . s3://dndbattletracker.com/stage/
+  # deploystage:
+  #   name: Deploy to Staging
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: staging
+  #     url: https://dndbattletracker.com/stage/
+  #   concurrency:
+  #     group: staging
+  #     cancel-in-progress: true
+  #   needs: testbuild
+  #   if: github.event_name == 'push'
+  #   permissions:
+  #     id-token: write
+  #     contents: read
+  #   steps:
+  #     - name: Download Build Artefact
+  #       uses: actions/download-artifact@v3
+  #       with:
+  #         name: dist
+  #     - name: Configure AWS Credentials
+  #       uses: aws-actions/configure-aws-credentials@v1-node16
+  #       with:
+  #         role-to-assume: arn:aws:iam::341118543232:role/github-s3-access
+  #         aws-region: eu-west-2
+  #     - name: Deploy to Staging
+  #       run: aws s3 sync . s3://dndbattletracker.com/stage/
 
-  deployprodpreflight:
-    name: Deploy to Production Preflight Checks
-    runs-on: ubuntu-latest
-    needs: deploystage
-    if: github.event_name == 'push'
-    outputs:
-      versionchanged: ${{ steps.versioncheck.outputs.changed }}
-      version: ${{ steps.versioncheck.outputs.version }}
-    steps:
-      - uses: actions/checkout@v3
-      - name: Check if version has been updated
-        id: versioncheck
-        uses: EndBug/version-check@v2
-        with:
-          diff-search: true
+  # deployprodpreflight:
+  #   name: Deploy to Production Preflight Checks
+  #   runs-on: ubuntu-latest
+  #   needs: deploystage
+  #   if: github.event_name == 'push'
+  #   outputs:
+  #     versionchanged: ${{ steps.versioncheck.outputs.changed }}
+  #     version: ${{ steps.versioncheck.outputs.version }}
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Check if version has been updated
+  #       id: versioncheck
+  #       uses: EndBug/version-check@v2
+  #       with:
+  #         diff-search: true
 
-  deployprod:
+  # deployprod:
     name: Deploy to Production
     runs-on: ubuntu-latest
     environment:
@@ -115,18 +115,23 @@ jobs:
   githubrelease:
     name: Github Release
     runs-on: ubuntu-latest
-    needs: [deployprodpreflight, deployprod]
+    # needs: [deployprodpreflight, deployprod]
     if: github.event_name == 'push'
     permissions:
       contents: write
       id-token: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
       - name: Download Build Artefact
         uses: actions/download-artifact@v3
         with:
           name: dist
+      - name: Display structure of downloaded files
+        run: ls -R
+      - uses: vimtor/action-zip@v1.2
+        with:
+          files: ./
+          recursive: true
+          dest: dnd-battle-tracker.zip
       - name: Display structure of downloaded files
         run: ls -R
       - name: Create release
@@ -136,4 +141,4 @@ jobs:
           makeLatest: true
           body: ${{ github.event.head_commit.message }}
           tag: "v${{ needs.deployprodpreflight.outputs.version }}"
-          artifacts: "dist.zip"
+          artifacts: "dnd-battle-tracker.zip"
